# ra2ob

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  clean_logger.py  main.cpp  numeric_offsets.json  ra2ob.cpp  ra2ob.hpp  unit_offsets.json  view.json  view_n.json
Ra2ob/: Ra2ob  example.cpp
Ra2ob/src/: Constants.hpp  Datatypes.hpp  FileIO.hpp  Game.hpp  Reader.hpp  Utils.hpp  Viewer.hpp
config/: panel_offsets.json  unit_offsets.json  view.json
